[package]
name = "zircon-loader"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"
description = "Zircon user program (userboot) loader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
xmas-elf = "0.7"
zircon-object = { git = "https://github.com/rcore-os/zCore.git", features = ["elf"] }
zircon-syscall = { git = "https://github.com/rcore-os/zCore.git" }
kernel-hal = { git = "https://github.com/rcore-os/zCore.git" }
env_logger = { version = "0.7", optional = true }
structopt = { version = "0.3", default-features = false, optional = true }
kernel-hal-unix = { git = "https://github.com/rcore-os/zCore.git" , optional = true }
async-std = { version = "1.5", features = ["attributes"], optional = true }

[features]
default = ["std"]
std = ["env_logger", "structopt", "async-std", "kernel-hal-unix"]
